complete login page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
             <div class="col-8">
                 <div class="card signin-card">
                     <div class="card-body">
-                      This is some text within a card body.
+                      <img class="img-fluid signin-img" src="Logo.png" alt="">
+                      <form class="signin-form">
+                        <div class="form-group">
+                          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Username ">
+                        </div>
+                        <div class="form-group">
+                          <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Password ">
+                        </div>
+                        <button type="button" class="btn btn-primary signin-btn">Login</button>
+                      </form>
                     </div>
                   </div>
             </div>
