to restart here

--- a/control.html
+++ b/control.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar navbar-light  navbar-custom">
+        <span class="navbar-brand mb-0 h1">MelcatAuto</span>
+      </nav>
     <div class="container control">
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -33,9 +36,7 @@
             </div>
           </nav> -->
 
-          <nav class="navbar navbar-light bg-light">
-            <span class="navbar-brand mb-0 h1">MelcatAuto</span>
-          </nav>
+          
           
 
         <nav>
