--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 </head>
 <body class="signing-body">
+    <nav class="navbar navbar-light  navbar-custom">
+        <span class="navbar-brand mb-0 h1">MelcatAuto</span>
+      </nav>
     <div class="container signin-container">
         <div class="row">
             <div class="col">
@@ -35,7 +38,7 @@
 
         </div>
     </div>
-    
+
     <script src="jquery3.2.js"></script>
     <script src="bootstrap.min.js"></script>
     
